# Hackathon-Book

./: .gitignore  agent-backend.py  agent.py  pyrightconfig.json  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  api.py  main.py  pyproject.toml  retrieve.py
book/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
book/docs/module-1-ros2/: _category_.json  chapter-1-intro.md  chapter-2-communication.md  chapter-3-urdf.md  index.md
book/docs/module-2-digital-twin/: _category_.json  chapter-1-gazebo.md  chapter-2-unity.md  chapter-3-sensors.md  index.md
book/docs/module-3-isaac-brain/: index.md  (+4 more)
docs/: agents-sdk-docs.md
specs/001-module1-ros2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-module2-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-module3-isaac-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-module4-vla/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ui-upgrade/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-rag-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-fastapi-rag-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+66 files in other folders)
