[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.7",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai-agents>=0.11.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
]
